--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ MONGO_URI=mongodb+srv://cfadmin:M3782J88zlcsjGUn@clustercof.887e8.mongodb.net/co
 SMTP_USER=atendimentoapp@colhendoofuturo.com
 SMTP_PASS=[Pk8d~SA=bQF
 JWT_SECRET=sua_chave_secreta_aqui2
-BASE_URL=http://localhost:5000
+API_BASE_URL=http://localhost:5000
 
 
 
