--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "colhendoofuturo-app": "file:",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^10.0.0",
     "nodemailer": "^6.6.3"
   },
   "devDependencies": {
